_bug Fix for java9